# MetricsLib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt
src/IMetrics/: CPUMetric.cpp  CPUMetric.h  CPUUsageMetric.cpp  CPUUsageMetric.h  CPUUtilMetric.cpp  CPUUtilMetric.h  CardinalityMetricAny.cpp  CardinalityMetricAny.h  CardinalityMetricType.cpp  CardinalityMetricType.h  CardinalityMetricValue.h  CodeTimeMetric.cpp  CodeTimeMetric.h  Demangle.h  HTTPIncomeMetric.cpp  HTTPIncomeMetric.h  IMetrics.cpp  IMetrics.h  IncrementMetric.cpp  IncrementMetric.h  LatencyMetric.cpp  LatencyMetric.h  Metrics.h  MetricsTags.h  MyAny.h
src/MetricsManager/: MetricsManager.h
src/MultiThreadWriter/: MultiThreadWriter.h  Writer.cpp  Writer.h  WriterUtils.h
tests/: CMakeLists.txt  cardinality_metric_any_tests.cpp  cardinality_value_tests.cpp  code_time_tests.cpp  cpu_metric_tests.cpp  cpu_usage_metric_tests.cpp  http_income_tests.cpp  increment_metric_tests.cpp  latency_metric_tests.cpp  metrics_manager_tests.cpp  my_any_tests.cpp  simple_test.cpp  writer_tests.cpp
